# falcon-cpp-python

./: .gitmodules  CMakeLists.txt  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
examples/high_level_api/: high_level_api_inference.py
falcon_cpp/: __init__.py  falcon.py  falcon_cpp.py
falcon_cpp/server/: app.py
tests/: test_falcon.py
